# repogen

./: .ruff.toml  pyproject.toml
src/repogen/: git.py  main.py
