[project]
name = "repogen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.42.0",
    "tiktoken>=0.7.0",
    "aider-chat",
    "lox",
    "ruff>=0.6.1",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
